# agentic-mcp-support-ops-console

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
docs/: dataset.md  mcp.md  (+5 more)
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 20260622_0001_foundation.py  4f6cd88a0b72_add_investigations.py  693022e640d1_add_knowledge_retrieval.py  81a6f9440f09_create_support_domain.py  9a4f0d7c3b21_add_specialists_and_actions.py  c5a8d6b410ef_add_tool_invocations.py
services/api/src/tracedesk_api/: __init__.py  config.py  data_factory.py  database.py  dependencies.py  embeddings.py  evaluation.py  knowledge_ingest.py  knowledge_sources.py  live_access.py  main.py  models.py  retrieval.py  retrieval_eval.py  schemas.py  security.py  seed.py
services/api/src/tracedesk_api/investigations/: __init__.py  manager.py  model.py  report.py  repository.py  schemas.py  workflow.py
services/api/src/tracedesk_api/mcp_layer/: __init__.py  api_auth.py  authorization.py  contract_eval.py  contracts.py  gateway.py  knowledge_server.py  operations_server.py  runtime.py  server_cli.py  support_server.py
services/api/src/tracedesk_api/routers/: cases.py  evaluations.py  investigations.py  knowledge.py  sessions.py  tools.py
services/api/tests/: test_data_factory.py  test_evaluation.py  test_health.py  test_investigation_workflow.py  test_knowledge_sources.py  test_live_access.py  test_mcp_authorization.py  test_security.py
(+77 files in other folders)
